--- a/package.json
+++ b/package.json
@@ -14,9 +14,11 @@
     "aws-amplify": "^2.2.0",
     "aws-amplify-react": "^2.3.9-beta.0",
     "aws-amplify-react-native": "^2.2.3",
+    "aws-sdk": "^2.597.0",
     "native-base": "^2.13.8",
     "react": "16.9.0",
     "react-native": "0.61.5",
+    "react-native-actionsheet": "^2.4.2",
     "react-native-elements": "^1.2.7",
     "react-native-gesture-handler": "^1.5.2",
     "react-native-reanimated": "^1.4.0",
@@ -27,7 +29,9 @@
     "react-navigation": "^4.0.10",
     "react-navigation-drawer": "^2.3.3",
     "react-navigation-stack": "^1.10.3",
-    "react-navigation-tabs": "^2.6.2"
+    "react-navigation-tabs": "^2.6.2",
+    "react-redux": "^7.1.3",
+    "redux": "^4.0.5"
   },
   "devDependencies": {
     "@babel/core": "^7.7.4",
